--- a/enVision-Magazine/css/styleVM.css
+++ b/enVision-Magazine/css/styleVM.css
@@ -6,7 +6,7 @@ h1 {
     font-size: 30px;
     font-weight: 700;
     color: #35B851;
-    margin-bottom: 15%;
+    margin-bottom: 44%;
 }
 
 h2 {
@@ -22,6 +22,7 @@ h3 {
     font-size: 22px;
     font-weight: 700;
     color: #575757;
+    width: 66%;
 }
 
 h4 {
@@ -48,7 +49,7 @@ p {
 header {
     display: flex;
     background-color: #F8F8F8;
-    width: 1440px;
+    width: 1424px;
     height: 20%;
     margin-top: -0.5%;
     margin-left: -0.5%;
@@ -136,7 +137,7 @@ input {
     position: relative;
     width: 150%;
     padding: 2% 2% 5% 5%; /* Add padding to ensure content doesn't touch the border */
-    margin-bottom: 25%;
+    margin-bottom: 55%;
 }
 
 /* Style for the partial border */
@@ -177,9 +178,15 @@ input {
 .arti img {
     position: absolute;
     width: 25%;
-    margin-top: -9%;
+    border-radius: 5%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.33);
     margin-left: 70%;
     z-index: 0;
+}
+
+
+.full-arti {
+    margin-top: 44%;
 }
 
 .tag {
@@ -288,6 +295,10 @@ input {
 
 .strR.active {
   border: 5px solid #35b851;
+}
+
+.storiesTitle {
+    margin-bottom: 11%;
 }
 
 footer {
