--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -147,44 +147,44 @@ input::placeholder {
   margin-bottom: -15%;
 }
 
-path#_x3C_US_x3E_.st0 {
-  fill: #D3E1F2;
+path#US.st0 {
+  fill: #5DAAE3;
 }
 
-path#_x3C_China_x3E_.st0 {
-  fill: #D3E1F2;
+path#China.st0 {
+  fill: #5DAAE3;
 }
 
-path#_x3C_Japan_x3E_.st0 {
-  fill: #D3E1F2;
+path#Japan.st0 {
+  fill: #5DAAE3;
 }
 
-path#_x3C_Germany_x3E_.st0 {
-  fill: #D3E1F2;
+path#Germany.st0 {
+  fill: #5DAAE3;
 }
 
-path#_x3C_India_x3E_.st0 {
-  fill: #D3E1F2;
+path#India.st0 {
+  fill: #5DAAE3;
 }
 
-path#_x3C_UK_x3E_.st0 {
-  fill: #D3E1F2;
+path#UK.st0 {
+  fill: #5DAAE3;
 }
 
-path#_x3C_France_x3E_.st0 {
-  fill: #D3E1F2;
+path#France.st0 {
+  fill: #5DAAE3;
 }
 
-path#_x3C_Russia_x3E_.st0 {
-  fill: #D3E1F2;
+path#Russia.st0 {
+  fill: #5DAAE3;
 }
 
-path#_x3C_Canada_x3E_.st0 {
-  fill: #D3E1F2;
+path#Canada.st0 {
+  fill: #5DAAE3;
 }
 
-#_x3C_Italy_x3E_ {
-  fill: #D3E1F2;
+#Italy_x3E_ {
+  fill: #5DAAE3;
 }
 
 .list {
