--- a/enVision-Statistics/css/styleVS.css
+++ b/enVision-Statistics/css/styleVS.css
@@ -18,10 +18,10 @@ h2 {
 }
 
 h3 {
-    font-size: 25px;
+    font-size: 22px;
     font-weight: 300;
     color: #000000;
-    margin-top: 3%;
+    margin-top: 4%;
     margin-left: 5%;
 }
 
@@ -46,9 +46,14 @@ p {
     color: #000000;
 }
 
+svg {
+    height: 122%;
+    opacity: 70%;
+}
+
 header {
     position: relative;
-    z-index: 3;
+    z-index: 1;
     display: flex;
     background-image: url("../images/headerBackground.png");
     background-size: 100%;
@@ -84,6 +89,7 @@ button {
     background-color: #378CCB;
     border: 1px solid #378CCB;
     border-radius: 5px 0px 0px 5px;
+    opacity: 90%;
 }
 
 .searchButton img{
@@ -108,33 +114,33 @@ input::placeholder {
     position: absolute;
     z-index: 2;
     margin-top: -22%;
-    margin-left: 15%;
+    margin-left: -4%;
     padding-top: 7%;
     padding-left: 40%;
-    width: 630px;
+    width: 100%;
     height: 750px;
-    background-color: rgba(55, 140, 203, 0.25);
+    /* background-color: rgba(55, 140, 203, 0.25); */
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 100% 100%);
 }
 
 .topicsTag {
     white-space: nowrap;
     position: relative;
-    z-index: 2;
-    margin-top: 38%;
-    margin-left: 3%;
-    width: 125px;
-    height: 30px;
+    margin-top: 7%;
+    margin-left: 0.5%;
+    width: 111px;
+    height: 25px;
     color: #FFFFFF;
     background-color:  #378CCB;
     border: 1px solid  #378CCB;
+    font-size: 12px;
+    font-weight: 600;
     border-radius: 25px 25px 25px 25px;
 }
 
 .topicsTag:hover {
     color: #0C507A;
     background-color: #ffffff; /* Change the background color when clicked */
-    border-color: #ffffff; /* Change the border color if needed */
 }
 
 .topicsTag.clicked {
@@ -145,7 +151,7 @@ input::placeholder {
 
 .subTopics {
     display: none;
-    margin-top: -22%;
+    margin-top: -1%;
     margin-left: 15%;
 }
 
@@ -168,7 +174,6 @@ input::placeholder {
 
 .subTopicsSoc {
     display: none;
-    margin-top: -22%;
     margin-left: 15%;
 }
 
@@ -190,7 +195,6 @@ input::placeholder {
 
 .subTopicsGeo {
     display: none;
-    margin-top: -22%;
     margin-left: 15%;
 }
 
@@ -262,9 +266,9 @@ input::placeholder {
 
 .title h3 {
     color: #F8F8F8;
-    font-size: 33px;
-    font-weight: 400;
-    padding-top: 4%;
+    font-size: 22px;
+    font-weight: 500;
+    padding-top: 5%;
 }
 
 .statBar {
