--- a/enVision-Documentaries/css/styleVD.css
+++ b/enVision-Documentaries/css/styleVD.css
@@ -6,22 +6,21 @@ body {
 h1 {
     font-size: 30px;
     font-weight: 700;
-    color: #35B851;
+    color: #F36F40;
     margin-bottom: 44%;
 }
 
 h2 {
-    font-size: 25px;
-    font-weight: 400;
-    color: #35B851;
+    font-size: 44px;
+    font-weight: 600;
+    color: #F36F40;
     margin-top: -1%;
     margin-left: 15%;
-    transform: rotate(2deg);
 }
 
 h3 {
-    font-size: 22px;
-    font-weight: 700;
+    font-size: 44px;
+    font-weight: 600;
     color: #575757;
     width: 66%;
 }
@@ -30,7 +29,7 @@ h4 {
     font-size: 20px;
     font-weight: 400;
     color: #F8F8F8;
-    background-color: #35B851;
+    background-color: #F36F40;
     padding: 3%;
 }
 
@@ -48,13 +47,18 @@ p {
 }
 
 header {
-    display: flex;
-    background-color: #F8F8F8;
-    width: 1424px;
-    height: 20%;
+    position: relative;
+    z-index: 1;
+    background-image: url("../images/headerBackground.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 100%;
     margin-top: -0.5%;
     margin-left: -0.5%;
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 70%);
+}
+
+.top {
+    display: flex;
 }
 
 .logo img{
@@ -72,7 +76,7 @@ nav {
 nav a {
     padding: 50px;
     font-size: 22px;
-    color: #35B851;
+    color: #F36F40;
 }
 
 a{
@@ -82,7 +86,6 @@ a{
 form  {
     display: flex;
     width: 115%;
-    height: 55%;
     margin-top: 2.25%;
     margin-right: 2%;
 }
@@ -91,8 +94,8 @@ button {
     width: 15%;
     height: 50%;
     margin-top: 1.5%;
-    background-color: #35B851;
-    border: 1px solid #35B851;
+    background-color: #F36F40;
+    border: 1px solid #F36F40;
     border-radius: 5px 0px 0px 5px;;
 }
 
@@ -100,7 +103,7 @@ input {
     width: 100%;
     height: 50%;
     margin-top: 1.5%;
-    border: 1px solid #35B851;
+    border: 1px solid #F36F40;
     border-radius: 0px 5px 5px 0px;
 }
 
@@ -108,198 +111,128 @@ input {
     width: 80%;
 }
 
+.title {
+    margin-top: 2%;
+    margin-bottom: 0%;
+}
+
+.favourites {
+    display: flex;
+    margin-left: 15%;
+    position: relative;
+    align-items: flex-start; 
+}
+
+
+.favourites img {
+    width: 20%;
+    height: auto;
+    margin-left: -5%; /* Overlap effect */
+    z-index: 1;
+    transition: transform 0.3s ease, z-index 0.3s;
+}
+
+.favourites img:first-child {
+    margin-left: 0;
+}
+
+.fav1 {
+    margin-top: 7%;
+}
+
+.fav2 {
+    margin-top: 5%;
+}
+
+.fav3 {
+    margin-top: 3%;
+}
+
+.hero {
+    display: flex;
+    margin-left: 15%;
+    position: relative;
+    align-items: flex-start; 
+}
+
+.hero p{
+    width: 60%;
+    margin-left: -40%;
+}
+
 .allContent {
+    display: flex;
+    margin-left: 15%;
+}
+
+.magaz {
+    display:inline-table;
+    margin-left: 10%;
+    width: 60%;
+}
+
+.bottom {
     display: flex;
 }
 
-.list {
-    margin-left: 2%;
-    width: 15%;
-    border-right: 2px solid #35B851;
-    box-shadow: 3px 0 0 rgba(0, 0, 0, 0.1); /* right shadow */
+.stats {
+    margin-left: 10%;
+    width: 33%;
 }
 
-.list a:hover{
-    text-shadow: 1px 1px 2px #35B851;
+.doc {
+    margin-left: 10%;
+    width: 33%;
 }
 
-.list a.active h5{
-    color: #35B851!important;
-    font-weight: bold !important;
-}
-
-.articles {
-    width: 25%;
-    margin-left: 7%;
-}
-
-/* Style for the container */
-.arti {
+.viewsImages {
+    display: flex;
     position: relative;
-    width: 150%;
-    padding: 2% 2% 5% 5%; /* Add padding to ensure content doesn't touch the border */
-    margin-bottom: 55%;
+    align-items: flex-start; 
+    margin-left: 5%;
 }
 
-/* Style for the partial border */
-.arti::before {
-    content: ''; 
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 33%; /* Cover full width */
-    height: 33%; /* Adjust height as needed */
-    border-top: 2px solid #35b851; /* Border style, color, and width */
-    border-left: 2px solid #35b851;
-    box-sizing: border-box;
-}
-
-.arti::after {
-    content: ''; 
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 33%; /* Cover full width */
-    height: 33%; /* Adjust height as needed */
-    border-right: 2px solid #575757; /* Border style, color, and width */
-    border-bottom: 2px solid #575757;
-    box-sizing: border-box;
-}
-
-.arti a {
-    color: #35b851;
-    font-weight: 600;
-}
-
-.arti p {
-    position: relative;
+.viewsImages img{
+    width: 40%;
+    height: auto;
+    margin-left: -5%; /* Overlap effect */
     z-index: 1;
+    transition: transform 0.3s ease, z-index 0.3s;
 }
 
-.arti img {
-    position: absolute;
-    width: 25%;
-    border-radius: 5%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.33);
-    margin-left: 70%;
-    z-index: 0;
+.views1 {
+    margin-top: 20%;
 }
 
-
-.full-arti {
-    margin-top: 44%;
+.views2 {
+    margin-top: 10%;
 }
 
-.tag {
-    position: absolute;
-    top: -12px;     /* Slightly above the box */
-    left: -2px;     /* Aligned with the left border */
-    background: #FCED3A;
-    color: #575757;
-    padding: 2px 10px;
-    font-size: 0.75rem;
-    border-radius: 3px;
-    font-weight: bold;
-    z-index: 2;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15); /* Optional shadow */
+.rates {
+    margin-top: -15%; 
 }
 
-.stories {
-    width: 350px;
-    margin-left: 20%;
-    border-left: 2px solid #35b851;
-    box-shadow: -3px 0 0 rgba(0, 0, 0, 0.1); /* right shadow */
-    padding-left: 2%;
-}
-
-.strR {
-    margin-bottom: 2%;
-    border: 1px solid #575757;
-    padding: 1% 3% 3% 3%;
-}
-
-.strTop {
+.ratesImages {
+    display: flex;
     position: relative;
-    margin-bottom: 2%;
-    border-left: 1px solid #575757;
-    border-bottom: 1px solid #575757;
-    padding: 1% 3% 3% 3%;
+    align-items: flex-start;
+    margin-left: 10%;
 }
 
-.strTop::before {
-    content: ''; 
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    border-top: 1px solid #575757;
-    transform: skewY(-5deg);
-    transform-origin: left top;
-    box-sizing: border-box;
+.ratesImages img{
+    width: 40%;
+    height: auto;
+    margin-left: -10%; /* Overlap effect */
+    z-index: 1;
+    transition: transform 0.3s ease, z-index 0.3s;
 }
 
-.strTop::after {
-    content: ''; 
-    position: absolute;
-    top: -30;
-    right: 0;
-    height: 114%;
-    border-right: 1px solid #575757;
-    box-sizing: border-box;
+.rates2 {
+    margin-top: 15%;
 }
 
-.strTop:hover {
-    border-bottom: 1px solid #35b851;
-    border-left: 1px solid #35b851;  
-}
-
-.strTop:hover::before {
-  border-top-color: #35b851;
-}
-
-.strTop:hover::after {
-  border-right-color: #35b851;
-}
-
-.strTop:hover h3 {
-    color: #35b851;
-}
-
-.strR:hover {
-    border-color: #35b851;
-}
-
-.strR:hover h3 {
-    color: #35b851;
-}
-
-.strTop.active {
-    border-bottom: 5px solid #35b851;
-    border-left: 5px solid #35b851;  
-}
-
-.strTop.active::before {
-  border-top: 5px solid #35b851;
-}
-
-.strTop.active::after {
-  border-right: 5px solid #35b851;
-}
-
-.strTop.active h3 {
-  color: #35b851;
-}
-
-.strR.active h3 {
-  color: #35b851;
-}
-
-.strR.active {
-  border: 5px solid #35b851;
-}
-
-.storiesTitle {
-    margin-bottom: 11%;
+.rates3 {
+    margin-top: 25%;
 }
 
 footer {
@@ -319,7 +252,4 @@ footer img {
 .socials {
     text-align: center;
     margin-top: 1.5%;
-}
-
-.socials img {
 }
