--- a/enVision-Magazine/css/styleVM-page.css
+++ b/enVision-Magazine/css/styleVM-page.css
@@ -12,7 +12,7 @@ h1 {
 h2 {
     font-size: 25px;
     font-weight: 400;
-    color: #35B851;
+    color: #F36F40;
     margin-top: -1%;
     margin-left: 15%;
     transform: rotate(2deg);
@@ -28,7 +28,7 @@ h4 {
     font-size: 22px;
     font-weight: 400;
     color: #F8F8F8;
-    background-color: #35B851;
+    background-color: #F36F40;
     padding: 2%;
 }
 
@@ -70,7 +70,7 @@ nav {
 nav a {
     padding: 50px;
     font-size: 22px;
-    color: #35B851;
+    color: #F36F40;
 }
 
 a{
@@ -89,8 +89,8 @@ button {
     width: 15%;
     height: 50%;
     margin-top: 1.5%;
-    background-color: #35B851;
-    border: 1px solid #35B851;
+    background-color: #F36F40;
+    border: 1px solid #F36F40;
     border-radius: 5px 0px 0px 5px;;
 }
 
@@ -98,7 +98,7 @@ input {
     width: 100%;
     height: 50%;
     margin-top: 1.5%;
-    border: 1px solid #35B851;
+    border: 1px solid #F36F40;
     border-radius: 0px 5px 5px 0px;
 }
 
@@ -109,7 +109,7 @@ input {
 .list {
     margin-left: 2%;
     width: 15%;
-    border-right: 2px solid #35B851;
+    border-right: 2px solid #F36F40;
 }
 
 .articles {
@@ -133,8 +133,8 @@ input {
     left: 0;
     width: 33%; /* Cover full width */
     height: 33%; /* Adjust height as needed */
-    border-top: 2px solid #35b851; /* Border style, color, and width */
-    border-left: 2px solid #35b851;
+    border-top: 2px solid #F36F40; /* Border style, color, and width */
+    border-left: 2px solid #F36F40;
     box-sizing: border-box;
 }
 
@@ -151,7 +151,7 @@ input {
 }
 
 .arti a {
-    color: #35b851;
+    color: #F36F40;
     font-weight: 600;
 }
 
@@ -171,7 +171,7 @@ input {
 .stories {
     width: 350px;
     margin-left: 20%;
-    border-left: 2px solid #35b851;
+    border-left: 2px solid #F36F40;
     padding-left: 2%;
 }
 
