--- a/enVision-Magazine/css/styleVM.css
+++ b/enVision-Magazine/css/styleVM.css
@@ -49,7 +49,7 @@ p {
 
 header {
     display: flex;
-    background-color: #F8F8F8;
+    background-color: rgba(248, 248, 248, 0.75);
     width: 1424px;
     height: 20%;
     margin-top: -0.5%;
