--- a/enVision-Statistics/css/styleVS.css
+++ b/enVision-Statistics/css/styleVS.css
@@ -18,8 +18,8 @@ h2 {
 }
 
 h3 {
-    font-size: 22px;
-    font-weight: 300;
+    font-size: 20px;
+    font-weight: 500;
     color: #000000;
     margin-top: 4%;
     margin-left: 5%;
@@ -55,12 +55,29 @@ header {
     position: relative;
     z-index: 1;
     display: flex;
-    background-image: url("../images/headerBackground.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
     height: 40%;
     margin-top: -0.5%;
     margin-left: -0.5%;
+    overflow: hidden; /* Ensure no overflow from pseudo-element */
+}
+
+header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../images/headerBackground.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    opacity: 0.75; /* 75% visible */
+    z-index: 0;
+}
+
+header > * {
+    position: relative;
+    z-index: 1; /* Ensure content appears above background */
 }
 
 .logo img{
