--- a/enVision-Statistics/css/styleVS.css
+++ b/enVision-Statistics/css/styleVS.css
@@ -354,18 +354,18 @@ input::placeholder {
 }
 
 footer {
-    display: none;
+    display: flex;
     font-family: Avenir;
     font-size: 22px;
     color: #575757;
-    margin-top: 20%;
-    margin-bottom: 2%;
+    margin-top: 12%;
     justify-content: space-between;
     padding: 2%;
+    align-items: center;
 }
 
 footer img {
-    height: 33%;
+    width: 12%;
 }
 
 .socials {
