--- a/enVision-Documentaries/css/styleVD.css
+++ b/enVision-Documentaries/css/styleVD.css
@@ -4,33 +4,25 @@ body {
 }
 
 h1 {
-    font-size: 30px;
+    font-size: 33px;
     font-weight: 700;
     color: #F36F40;
-    margin-bottom: 44%;
 }
 
-h1 {
-    font-size: 44px;
-    font-weight: 600;
-    color: #F36F40;
-    margin-top: -1%;
-    margin-left: 15%;
+h2 {
+    font-size: 25px;
 }
 
 h3 {
-    font-size: 44px;
+    font-size: 20px;
     font-weight: 600;
     color: #575757;
-    width: 66%;
 }
 
 h4 {
-    font-size: 20px;
-    font-weight: 400;
-    color: #F8F8F8;
-    background-color: #F36F40;
-    padding: 3%;
+    font-size: 30px;
+    font-weight: 500;
+    color: black;
 }
 
 h5 {
@@ -38,7 +30,6 @@ h5 {
     font-weight: 400;
     color: #575757;
     border-bottom: 1px solid #575757;
-    padding: 3%;
 }
 
 h6 {
@@ -86,7 +77,7 @@ nav a {
     color: #F36F40;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
@@ -126,8 +117,8 @@ form  {
 
 button {
     width: 15%;
-    height: 50%;
-    margin-top: 1.5%;
+    height: 5%;
+    margin-top: 5%;
     background-color: #F36F40;
     border: 1px solid #F36F40;
     border-radius: 5px 0px 0px 5px;;
@@ -143,11 +134,6 @@ input {
 
 .searchButton img{
     width: 80%;
-}
-
-.title {
-    margin-top: 2%;
-    margin-bottom: 0%;
 }
 
 .favourites {
@@ -349,11 +335,7 @@ input {
     height: 100px;
     margin-top: 8%;
     background: linear-gradient(to right, rgba(242, 242, 242), rgba(242, 242, 242),rgba(242, 242, 242),rgba(213, 213, 213));
-}
-
-.video-sec h1{
-    font-size: 33px;
-    margin-left: 13%;
+    box-shadow: 2px 2px 5px #575757;
 }
 
 .info-header h3{
@@ -361,7 +343,7 @@ input {
     color: #000000;
 }
 
-.info-description {
+.category-box {
     width: 70%;
     background: linear-gradient(to right, #FC8961, #F36F40);
     border-top-left-radius: 20px;
@@ -371,10 +353,11 @@ input {
     padding-left: 2%;
     /* Incline right side to the left */
     clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
+    align-items: center;
 }
 
-.info-description h3{
-    margin-top: 2%;
+.category {
+    margin-top: 9%;
 }
 
 .info-description h2{
@@ -383,7 +366,7 @@ input {
     color: #F8F8F8;
 }
 
-.info-number {
+.views-number {
     width: 35%;
     border-top-left-radius: 0px;
     border-top-right-radius: 20px;
@@ -393,19 +376,19 @@ input {
     align-content: center;
 }
 
-.info-number h2{
+.views-number h2{
     font-size: 25px;
     color: #575757;
 }
 
 
-.info-body {
+.info-description {
     border-radius: 20px;
     border: solid 2px #F36F40;
     background-color: rgba(248, 248, 248, 0.66);
-    padding: 0% 5%;
+    padding: 5%;
     margin-top: 3%;
-    height: 63%;
+    height: 190px;
 }
 
 .info-body h5{
@@ -417,13 +400,175 @@ input {
     font-size: 15px;
 }
 
-.otherVids {
-    display: flex;
+#interactives {
+    width: 78%;
+    gap: 20px; /* spacing between like/comment/share */
+    border-radius: 20px;
+    border: solid 2px #F36F40;
+    background-color: rgba(248, 248, 248, 0.66);
+    padding: 3%;
+    margin-top: 1%;
     margin-left: 5%;
 }
 
-.others-title {
-    margin-left: 6%;
+#interactives-icons {
+    display: flex;
+}
+
+#interactives img {
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+#like, #comment, #share {
+  width:  24px;
+  height: 24px;
+}
+
+.icon-container {
+  margin-left: 2%;
+  display: flex;
+  align-items: center;   /* vertical centering */
+  gap: 6px;              /* space between icon and number */
+  cursor: pointer;
+
+}
+
+#interactives span {
+  font-size: 20px;
+  margin-right: 2%;
+}
+
+#comment-section {
+  margin-top: 10px;
+  position: relative;   /* allows z-index to work */
+  z-index: 1000;        /* ensures it appears above other elements */
+}
+
+
+#comment-input {
+  border: none;
+  background-color: rgb(0, 0, 0, 0.05);
+  width: 100%;
+  padding: 6px;
+  margin-bottom: 6px;
+}
+
+#comments-list {
+    margin-top: 10px;
+    padding-left: 10px;
+}
+
+.comment-item {
+    padding: 6px;
+    border-bottom: 1px solid #ccc;
+}
+
+#submit-comment {
+  width: 100px;
+  height: 35px;
+  border: #000000;
+  border-radius: 5px;
+  background: linear-gradient(#575757, #333333, #000000);
+  color: #FFFFFF;
+}
+
+#submit-comment:hover {
+  border: #F36F40;
+  background: linear-gradient(#f07e57, #F36F40, #ec6134); /* Gradient colors */
+}
+
+.actions {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+
+.action {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  cursor: pointer;
+}
+
+#share-options {
+  position: absolute;
+  top: 100%;  /* distance below share icon */
+  left: 23%;    /* align with left edge */
+  display: none; /* hidden by default */
+  flex-direction: row;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+  padding: 25px;
+  gap: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  z-index: 9999;
+}
+
+
+#share-options img {
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+#share-options img:hover {
+  transform: scale(1.2);
+}
+
+.hidden {
+  display: none;
+}
+
+.delete-confirm {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  z-index: 10000;
+}
+
+#delete-confirm  button {
+  border-radius: 5px;
+}
+
+#confirm-delete {
+  background: linear-gradient(#575757, #333333, #000000); /* Gradient colors */
+}
+
+#confirm-delete {
+  color: white;
+  border: none;
+  background: linear-gradient(#575757, #333333, #000000); /* Gradient colors */
+}
+
+#cancel-delete {
+  color: white;
+  background: linear-gradient(#f07e57, #F36F40, #ec6134); /* Gradient colors */
+}
+
+.replies-count {
+  font-size: 14px;
+  line-height: 1;
+  display: inline-block;
+  margin-left: 5px; /* spacing after icon */
+  margin-top: -10px;
+  vertical-align: middle; /* aligns with icon */
+}
+
+.vids {
+    margin-left: 5%;
+    margin-top: 15%;
+    margin-bottom: 10%;
+}
+
+.otherVids {
+    display: flex;
 }
 
 .others {
@@ -436,7 +581,7 @@ footer {
     font-family: Avenir;
     font-size: 22px;
     color: #575757;
-    margin-top: 17%;
+    margin-top: 50%;
     justify-content: space-between;
     padding: 2%;
 }
@@ -457,7 +602,7 @@ footer img {
     .allContent {
         margin-top: -17%;
     }
-    .info-description h2{
+    .category-box h2{
         font-size: 20px;
     }
     .info-body h5 {
@@ -491,13 +636,13 @@ footer img {
     .views {
         margin-left: -14%;
     }
-    .info-description h2{
+    .category-box h2{
         font-size: 18px;
     }
-    .info-description h3{
+    .category-box h3{
         font-size: 15px;
      }
-     .info-number h2 {
+     .views-number h2 {
         font-size: 22px;
      }
      .info-body {
@@ -563,17 +708,17 @@ footer img {
     nav {
         margin-top: -3%;
     }
-    .info-description h2{
+    .category-box h2{
         font-size: 17px;
     }
-    .info-description h3{
+    .category-box h3{
         font-size: 14px;
      }
-     .info-number h2 {
+     .views-number h2 {
         font-size: 20px;
      }
     .otherVids {
-        margin-bottom: 25%;
+        margin-bottom: 15%;
     }
     .vid-footer {
         margin-top: 40%;
@@ -625,14 +770,14 @@ footer img {
     .rates {
         margin-left: 14%;
     }
-    .info-description h2{
+    .category-box h2{
         font-size: 17px;
     }
-    .info-description h3{
+    .category-box h3{
         width: 50%;
         font-size: 14px;
      }
-     .info-number h2 {
+     .views-number h2 {
         font-size: 20px;
      }
          .info-body {
@@ -686,7 +831,7 @@ footer img {
         font-size: 33px;
         text-wrap: nowrap;
     }
-    .info-description h2 {
+    .category-box h2 {
         font-size: 19px;
     }
     .video-sec h1 {
@@ -725,7 +870,7 @@ footer img {
         width: 90%;
         margin-left: 7%;
     }
-    .info-description h2 {
+    .category-box h2 {
         margin-top: -3%;
     }
     .vid-footer {
@@ -751,10 +896,10 @@ footer img {
     .favourites {
         margin-top: -2%;
     }
-    .info-description h3 {
+    .category-boxh3 {
         font-size: 11px ;
     }
-    .info-description h2 {
+    .category-box h2 {
         font-size: 13px ;
     }
     .info-body {
@@ -841,7 +986,7 @@ footer img {
         width: 90%;
         margin-left: 7%;
     }
-    .info-description h2 {
+    .category-box h2 {
         margin-top: -3%;
     }
     .info-body {
@@ -881,7 +1026,7 @@ footer img {
         width: 90%;
         margin-left: 7%;
     }
-    .info-description h2 {
+    .category-box h2 {
         margin-top: -3%;
     }
     .vid-footer {
@@ -1199,8 +1344,8 @@ footer img {
         width: 150%;
     }
     .title {
-        font-size: 22px;
-        margin-top: -6%;
+        font-size: 33px;
+        margin-left: 12%;
     }
     .favourites {
         margin-top: -3%;
@@ -1231,7 +1376,7 @@ footer img {
         width: 10%;
         height: 50%;
     }
-    .info-description h2{
+    .category-box h2{
         font-size: 19px;
     }
     .vid-footer {
@@ -1263,7 +1408,7 @@ footer img {
     .allContent {
         margin-top: -50%;
     }   
-    .info-description h2{
+    .category-box h2{
         font-size: 16px;
     }
     .vid-footer {
@@ -1305,13 +1450,13 @@ footer img {
     .allContent {
         margin-top: -111%;
     }
-    .info-description h2{
+    .category-box h2{
         font-size: 15px;
     }
-    .info-description h3{
+    .category-box h3{
         font-size: 12px;
     }
-    .info-number h2{
+    .views-number h2{
         font-size: 17px;
     }
 }
