--- a/enVision-Documentaries/css/styleVD.css
+++ b/enVision-Documentaries/css/styleVD.css
@@ -14,7 +14,7 @@ h2 {
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 33px;
     font-weight: 600;
     color: #575757;
 }
@@ -113,6 +113,10 @@ form  {
     width: 115%;
     margin-top: 2.25%;
     margin-right: 2%;
+}
+
+.title {
+    margin-left: 15%;
 }
 
 button {
@@ -586,7 +590,7 @@ footer {
     font-family: Avenir;
     font-size: 22px;
     color: #575757;
-    margin-top: 50%;
+    margin-top: 20%;
     justify-content: space-between;
     padding: 2%;
 }
