--- a/enVision-Documentaries/css/styleVD.css
+++ b/enVision-Documentaries/css/styleVD.css
@@ -14,7 +14,7 @@ h2 {
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 600;
     color: #575757;
 }
@@ -115,10 +115,6 @@ form  {
     margin-right: 2%;
 }
 
-.title {
-    margin-left: 15%;
-}
-
 button {
     width: 15%;
     height: 5%;
@@ -143,6 +139,10 @@ input {
 
 .searchButton img{
     width: 80%;
+}
+
+.hero-title {
+    margin-left: 15%;
 }
 
 .favourites {
