--- a/enVision-Magazine/css/styleVM.css
+++ b/enVision-Magazine/css/styleVM.css
@@ -636,8 +636,6 @@ nav {
   color: #FFFFFF;
 }
 
-
-
 /* Media Query: 500px to 800px */
 @media screen and (min-width: 500px) and (max-width: 800px) {
   header {
@@ -904,6 +902,14 @@ nav {
   }
 }
 
+@media screen  and (min-width: 425px) and (max-width: 433px) {
+    header {
+      width: 102%;
+      margin-top: -2%;
+      margin-left: -2%;
+    }
+ }
+
 @media screen and (max-width: 400px) {
     header {
         width: 106%;
@@ -967,12 +973,17 @@ nav {
 
 @media screen and (width: 1024px) and (height: 768px) {
     header {
-        width: 101%;
         margin-top: -1%;
         margin-left: -1%;
     }
 }
 
+@media screen and (min-width: 760px) and (max-width: 770px) {
+    header {
+        margin-top: -1%;
+        margin-left: -1%;
+    }
+}
 @media screen and (min-width: 730px) and (max-width: 750px) {
     header {
         height: 25%;
